2004-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/audioconvert/gstchannelmix.c:
	  fix for GLIB < 2.4

2004-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* configure.ac:
	  disable docs again until it actually passes make distcheck.

2004-12-24  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/qtdemux/qtdemux.c: (qtdemux_type_get), (qtdemux_audio_caps):
	* gst/typefind/gsttypefindfunctions.c: (q3gp_type_find),
	(plugin_init):
	  Add 3GP (variables name Q3GP because they can't start with a
	  number). Add samr audio fourcc (used in .3gp files), decoder
	  is work in progress. Also do a GST_WARNING instead of ERROR
	  in case of unknown nodes, to decrease output.

2004-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	  really fix dist

2004-12-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* ext/speex/gstspeexdec.h:
	* ext/speex/gstspeexenc.h:
	  Fixes #158382.  Make speex plugin compatible with both 1.0 and 1.1.
	  Fix detection code in configure.ac

2004-12-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_parse_blockgroup):
	  Save position, so that queries give proper return values. Don't
	  know how this could ever have worked before...

2004-12-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Put additional LAME check inside the conditional.  Fixes #152339

2004-12-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_stream_index),
	(gst_avi_demux_stream_scan):
	  Add some more debug. Fix logic error when setting movi offset
	  while reading index.

2004-12-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_stream_index),
	(gst_avi_demux_stream_scan), (gst_avi_demux_handle_seek),
	(gst_avi_demux_process_next_entry):