@@ -32,7 +32,7 @@ GST_DEBUG_CATEGORY (vorbisdec_debug);
 static gboolean
 plugin_init (GstPlugin * plugin)
 {
-  if (!gst_library_load ("gstbytestream"))
+  if (!gst_library_load ("riff"))
     return FALSE;
 
   gst_ogg_demux_plugin_init (plugin);
