@@ -547,9 +547,8 @@ gst_ogm_parse_plugin_init (GstPlugin * plugin)
 {
   GST_DEBUG_CATEGORY_INIT (gst_ogm_parse_debug, "ogmparse", 0, "ogm parser");
 
-  return gst_library_load ("riff") &&
-      gst_element_register (plugin, "ogmaudioparse", GST_RANK_PRIMARY,
-      GST_TYPE_OGM_AUDIO_PARSE) &&
-      gst_element_register (plugin, "ogmvideoparse", GST_RANK_PRIMARY,
+  return gst_element_register (plugin, "ogmaudioparse", GST_RANK_PRIMARY,
+      GST_TYPE_OGM_AUDIO_PARSE)
+      && gst_element_register (plugin, "ogmvideoparse", GST_RANK_PRIMARY,
       GST_TYPE_OGM_VIDEO_PARSE);
 }
